--- a/src/site/notes/1.0 - 🏠 AllotmentZone/1.1 - Niall's Cave.md
+++ b/src/site/notes/1.0 - 🏠 AllotmentZone/1.1 - Niall's Cave.md
@@ -9,10 +9,10 @@
 
 **Welcome my Cave.** Here you will see a glimpse into how I perceive the world, be it through photography, books or music. There is plenty to get stuck into here:
 
-👉 To see what I've been up to recently, check out my [[1.0 - 🏠 AllotmentZone/My Week In Photos\|My Week In Photos]].
-👉 To read some of my musings, have a browse of my [[1.0 - 🏠 AllotmentZone/1.3 - Blog\|Blog]].
-👉 If you want to see some galleries, click here [[1.0 - 🏠 AllotmentZone/1.5 - Galleries\|Galleries]].
-👉 You're a book worm? Burrow into my [[1.0 - 🏠 AllotmentZone/1.4 - Bookshelf\|Bookshelf]].
+👉 To see what I've been up to recently, check out my [[My Week In Photos\|My Week In Photos]].
+👉 To read some of my musings, have a browse of my [[1.3 - Blog\|Blog]].
+👉 If you want to see some galleries, click here [[1.5 - Galleries\|Galleries]].
+👉 You're a book worm? Burrow into my [[1.4 - Bookshelf\|Bookshelf]].
 
 >[!TIP] Tip
 >You can click any tag to see all posts with that tag. Try it: #nature #photography #wildlife
@@ -22,17 +22,8 @@
 ## Recents 📝
 
 For some recent activity, see below. I frequently update posts so they will appear here too. All posts can be found [here](https://niallbell.com/blog).
-| Cover                                                               | Title                                                                                                                                               | Created               | Updated             | Type          | Tags                                                                 |
-| ------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------- | ------------------- | ------------- | -------------------------------------------------------------------- |
-| <img src='https://i.imgur.com/t3pESMu.jpeg' style='height:160px;'/> | [[1.0 - 🏠 AllotmentZone/My Week In Photos\|My Week In Photos]]                                                                                  | 📅 March 18, 2024     | 🔄 October 28, 2024 | 💭 Photo Feed | #photography #photofeed                                              |
-| <img src='https://i.imgur.com/9wUq3cS.jpg' style='height:160px;'/>  | [[2.0 - 📝 Blog Posts/2.3 - 💾 Tech/Social Media Dilemma\|Social Media Dilemma]]                                                                 | 📅 August 14, 2024    | 🔄 August 14, 2024  | 💭 Blog Post  | #socialmedia #socials #instagram #facebook #Socialmedia              |
-| <img src='https://i.imgur.com/BiYriQv.png' style='height:160px;'/>  | [[2.0 - 📝 Blog Posts/2.2 - 🌱 Nature/International Tiger Day 2024\|International Tiger Day 2024]]                                               | 📅 July 29, 2024      | 🔄 July 29, 2024    | 💭 Blog Post  | #internationaltigerday #tigers #nature #wildlife #conservation       |
-| <img src='https://i.imgur.com/7VfFNPl.jpeg' style='height:160px;'/> | [[2.0 - 📝 Blog Posts/2.2 - 🌱 Nature/Photographic Life List\|Photographic Life List]]                                                           | 📅 April 28, 2024     | 🔄 July 27, 2024    | 💭 Blog Post  | #photography #nature #lifelist #wildlife                             |
-| <img src='https://i.imgur.com/IJUcoJt.jpeg' style='height:160px;'/> | [[2.0 - 📝 Blog Posts/2.2 - 🌱 Nature/Black Winged Pratincole Doncaster 2024\|Black Winged Pratincole Doncaster 2024]]                           | 📅 July 08, 2024      | 🔄 July 08, 2024    | 💭 Blog Post  | #birds #rarebird #pratincole #photography #nature #wildlife #Birds   |
-| <img src='https://i.imgur.com/8bzvnWQ.png' style='height:160px;'/>  | [[2.0 - 📝 Blog Posts/2.7 - 🎞️ Photography/Highly Commended - Deer Photographer of the Year\|Highly Commended - Deer Photographer of the Year]] | 📅 June 24, 2024      | 🔄 June 24, 2024    | 💭 Blog Post  | #photo #photography #nature #wildlife #deer                          |
-| <img src='https://i.imgur.com/jo6fK8O.jpeg' style='height:160px;'/> | [[2.0 - 📝 Blog Posts/2.3 - 💾 Tech/How I Process My Photographs\|How I Process My Photographs]]                                                 | 📅 May 31, 2024       | 🔄 May 31, 2024     | 💭 Blog Post  | #photography #photo #postprocessing                                  |
-| <img src='https://i.imgur.com/1pQK9Zn.jpeg' style='height:160px;'/> | [[2.0 - 📝 Blog Posts/2.2 - 🌱 Nature/An Open Letter To Yorkshire Wildlife Park\|An Open Letter To Yorkshire Wildlife Park]]                     | 📅 May 12, 2024       | 🔄 May 12, 2024     | 💭 Blog Post  | #conservation #nature #wildlife #photography                         |
-| <img src='https://i.imgur.com/9DONEvA.jpeg' style='height:160px;'/> | [[2.0 - 📝 Blog Posts/2.2 - 🌱 Nature/Aurora Borealis in Doncaster\|Aurora Borealis in Doncaster]]                                               | 📅 September 23, 2022 | 🔄 May 11, 2024     | 💭 Blog Post  | #nature #weather #northernlights #auroraborealis #Nature #Atmosphere |
+| Cover | Title | Created | Updated | Type | Tags |
+| ----- | ----- | ------- | ------- | ---- | ---- |
 
 { .block-language-dataview}
 
@@ -43,6 +34,6 @@ For some recent activity, see below. I frequently update posts so they will appe
 
 
 ---
-📧 Sign up to my newsletter [[96 - Hidden Notes/Newsletter\|here]].
+📧 Sign up to my newsletter [[Newsletter\|here]].
 Created by Niall Bell (niall@niallbell.com)
 
