Published multiple files

--- a/src/site/notes/1.0 - The Allotment.md
+++ b/src/site/notes/1.0 - The Allotment.md
@@ -30,9 +30,9 @@ Here a basic directory for some Digital gardens. If you want adding to this list
 </div>
 <br>
 
-| Cover                                                                           | Title            | Gardener         | Added                | Link                     | Tags                              |
-| ------------------------------------------------------------------------------- | ---------------- | ---------------- | -------------------- | ------------------------ | --------------------------------- |
-| <img src='https://i.imgur.com/9wUq3cS.jpg' style='height:200px; width:300px;'/> | 🪴 niallbell.com | 🧑‍🌾 Niall Bell | 📅 December 31, 2024 | 🔗 https://niallbell.com | 🏷️ nature, photography, wildlife |
+| Cover                                                                           | Title           | Gardener         | Added                | Link                                      | Tags                              |
+| ------------------------------------------------------------------------------- | --------------- | ---------------- | -------------------- | ----------------------------------------- | --------------------------------- |
+| <img src='https://i.imgur.com/9wUq3cS.jpg' style='height:200px; width:300px;'/> | 🪴 Niall's Cave | 🧑‍🌾 Niall Bell | 📅 December 31, 2024 | 🔗 [niallbell.com](https://niallbell.com) | 🏷️ nature, photography, wildlife |
 
 { .block-language-dataview}
 
