Published multiple files

--- a/src/site/notes/1.0 - The Allotment.md
+++ b/src/site/notes/1.0 - The Allotment.md
@@ -31,7 +31,7 @@ How does it work? The Allotment in it's current form brings together many digita
 | Cover                                                                                                                                           | Title            | Gardener         | Added                | Link                                 | Tags                              |
 | ----------------------------------------------------------------------------------------------------------------------------------------------- | ---------------- | ---------------- | -------------------- | ------------------------------------ | --------------------------------- |
 | <a href='https://niallbell.com' target='_blank'><img src='https://i.imgur.com/9wUq3cS.jpg' style='height:200px; width:300px;'/></a>             | 🪴 Niall's Cave  | 🧑‍🌾 Niall Bell | 📅 December 31, 2024 | 🔗 https://niallbell.com             | 🏷️ nature, photography, wildlife |
-| <a href='https://allotmentzone.vercel.app/' target='_blank'><img src='https://i.imgur.com/R2FRo9O.png' style='height:200px; width:300px;'/></a> | 🪴 The Allotment | 🧑‍🌾 Niall Bell | 📅 December 31, 2024 | 🔗 https://allotmentzone.vercel.app/ | 🏷️ \-                            |
+| <a href='https://allotmentzone.vercel.app/' target='_blank'><img src='https://i.imgur.com/R2FRo9O.png' style='height:200px; width:300px;'/></a> | 🪴 The Allotment | 🧑‍🌾 Niall Bell | 📅 December 31, 2024 | 🔗 https://allotmentzone.vercel.app/ | 🏷️ digitalgarden, blog, tech     |
 
 { .block-language-dataview}
 
